Teste de alteração de arquivo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <p>Texto de teste para HTML</p>
-    <img src="./img/logoSenai.png" alt="Logo Senai"/>
+    <img src="./img/logoSenai.png" alt="Logo Senai Teste"/>
 </body>
 </html>
