--- a/index2.html
+++ b/index2.html
@@ -18,14 +18,16 @@
             <li><a href="https://www.einstein.br/estrutura/banco-sangue/doe-sangue-plaquetas">Doe Sangue e Plaquetas</a></li>
         </ul>
     </nav>
-    <p>
-        <span>Podem doar sangue pessoas entre 16 e 69 anos e que estejam pesando mais de 50kg. Além disso, é preciso apresentar documento oficial com foto e menores de 18 anos só podem doar com consentimento formal dos responsáveis (acesse o formulário).</span>
-    </p>
+    <section>
+        <article>
+            <p>
+                <span>Podem doar sangue pessoas entre 16 e 69 anos e que estejam pesando mais de 50kg. Além disso, é preciso apresentar documento oficial com foto e menores de 18 anos só podem doar com consentimento formal dos responsáveis (acesse o formulário).</span>
+            </p>
+        </article>
+    </section>
 
     <iframe width="210" height="157" src="https://www.youtube.com/embed/97Sx0KiExZM?controls=1"></iframe>
       
-
-
     <iframe width="210" height="157" src="https://www.youtube.com/embed/QsWCy8sRUlI?controls=1"></iframe>
     <iframe width="210" height="157" src="https://www.youtube.com/embed/T6UXf8xFFUk?controls=1"></iframe>
     <iframe width="210" height="157" src="https://www.youtube.com/embed/ibnMR1EqTb0?controls=1"></iframe>
