--- a/index2.html
+++ b/index2.html
@@ -9,28 +9,27 @@
 </head>
 <body>
     <header>
-        <img src="./img/banner.jpg" alt="Banner doar sangue faz bem a saúde" width="996" height="148"/>
+            <img src="./img/banner.jpg" alt="Banner doar sangue faz bem a saúde" width="996" height="148"/>
     </header>
-    <nav>
-        <ul>
-            <li><a href="http://www.prosangue.sp.gov.br/">Fundação Pró-Sangue</a></li'>
-            <li><a href="https://www.doesanguedoevida.com.br/">Banco de Sangue</a></li>
-            <li><a href="https://www.einstein.br/estrutura/banco-sangue/doe-sangue-plaquetas">Doe Sangue e Plaquetas</a></li>
-        </ul>
-    </nav>
-    <section>
-        <article>
+    <div>
+        <nav>
+            <ul>
+                <li><a href="http://www.prosangue.sp.gov.br/" target="blank">Fundação Pró-Sangue</a></li'>
+                <li><a href="https://www.doesanguedoevida.com.br/" target="blank">Banco de Sangue</a></li>
+                <li><a href="https://www.einstein.br/estrutura/banco-sangue/doe-sangue-plaquetas" target="blank">Doe Sangue e Plaquetas</a></li>
+            </ul>
+        </nav>
+        <section>
             <p>
-                <span>Podem doar sangue pessoas entre 16 e 69 anos e que estejam pesando mais de 50kg. Além disso, é preciso apresentar documento oficial com foto e menores de 18 anos só podem doar com consentimento formal dos responsáveis (acesse o formulário).</span>
+                Podem doar sangue pessoas entre 16 e 69 anos e que estejam pesando mais de 50kg. Além disso, é preciso apresentar documento oficial com foto e menores de 18 anos só podem doar com consentimento formal dos responsáveis (acesse o formulário).
             </p>
-        </article>
-    </section>
-
-    <iframe width="210" height="157" src="https://www.youtube.com/embed/97Sx0KiExZM?controls=1"></iframe>
-      
-    <iframe width="210" height="157" src="https://www.youtube.com/embed/QsWCy8sRUlI?controls=1"></iframe>
-    <iframe width="210" height="157" src="https://www.youtube.com/embed/T6UXf8xFFUk?controls=1"></iframe>
-    <iframe width="210" height="157" src="https://www.youtube.com/embed/ibnMR1EqTb0?controls=1"></iframe>
-
+        </section>
+        <section>
+            <iframe width="210" height="157" src="https://www.youtube.com/embed/97Sx0KiExZM?controls=1"></iframe>
+            <iframe width="210" height="157" src="https://www.youtube.com/embed/QsWCy8sRUlI?controls=1"></iframe>
+            <iframe width="210" height="157" src="https://www.youtube.com/embed/T6UXf8xFFUk?controls=1"></iframe>
+            <iframe width="210" height="157" src="https://www.youtube.com/embed/ibnMR1EqTb0?controls=1"></iframe>
+        </section>
+    </div>
 </body>
 </html>
